--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,6 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      security-events: write
 
     steps:
     - uses: actions/checkout@v4
