[Build] Add jsoup library

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,9 @@
 [versions]
 guava = "33.4.5-jre"
 junit-jupiter = "5.12.1"
+jsoup = "1.17.2"
 
 [libraries]
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
+jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
